--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,6 @@ end_of_line = lf
 indent_style = space
 indent_size = 4
 
-[*.cpp]
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.ino] # Arduino
+[*.{cpp,h,ino}]
 trim_trailing_whitespace = true
 insert_final_newline = true
