feat: add terminal capability detection with color support
Implements Task 3 from desktop simulator implementation plan:
- Created TerminalCapabilities struct to detect UTF-8, color, and 256-color support
- Created TerminalDisplay class with ANSI escape sequence methods
- Added capability detection via environment variables (LANG, TERM, COLORTERM)
- Added terminal size detection via ioctl
- Implemented color rendering with graceful degradation
- Added 'test' command to main.cpp to verify terminal capabilities
- Updated Makefile to include terminal_display.cpp

Terminal capabilities detected:
- UTF-8 support via LANG environment variable
- Basic color support via TERM (xterm, color, screen)
- 256-color support via COLORTERM or TERM containing "256"
- Terminal dimensions via ioctl TIOCGWINSZ

Display methods implemented:
- clear(): Clear screen with ANSI codes
- moveCursor(x, y): Position cursor
- setColor(r, g, b): Set foreground color (24-bit or 16-color fallback)
- resetColor(): Reset to default colors
- printBlock(): Print UTF-8 block character or ASCII fallback

--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS += -Imocks -Imocks/freertos -I..
 LDFLAGS = -pthread -lcurl
 
 TARGET = simulator
-SRCS = main.cpp
+SRCS = main.cpp simulated_time.cpp terminal_display.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 .PHONY: all clean run
