--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -6,6 +6,7 @@ LDFLAGS = -pthread -lcurl
 TARGET = simulator
 SRCS = main.cpp simulated_time.cpp terminal_display.cpp \
        mocks/Arduino.cpp mocks/Preferences.cpp \
+       mocks/WiFi.cpp mocks/HTTPClient.cpp \
        mocks/freertos/queue.cpp mocks/freertos/task.cpp
 OBJS = $(SRCS:.cpp=.o)
 
