fix: move LED matrix rendering to Adafruit_NeoPixel (correct class)
The firmware uses Adafruit_NeoPixel, not Adafruit_NeoMatrix. Moved the
terminal rendering implementation to the correct class and added pixel
buffer storage. Now animations will actually display in the terminal.

--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -13,6 +13,7 @@ MOCK_SRCS = mocks/Arduino.cpp mocks/Preferences.cpp \
             mocks/WiFi.cpp mocks/HTTPClient.cpp \
             mocks/ESPmDNS.cpp mocks/ESP.cpp mocks/DisplayHandler.cpp \
             mocks/ArduinoJson.cpp mocks/secrets.cpp \
+            mocks/Adafruit_NeoPixel.cpp \
             mocks/freertos/queue.cpp mocks/freertos/task.cpp
 
 # Firmware sources (relative to parent directory)
